Added volume controls

--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,11 @@
         <div class="song-play-pause">X</div>
         <div class="song-next">X</div>
       </div>
+      <div class="volume-control">
+        <button id="muteButton" class="control-button" title="Toggle Mute"></button>
+        <input type="range" id="volumeSlider" min="1" max="100" class="volume-slider" />
+        <div id="volumeLevel">0</div>
+      </div>
     </div>
     <hr />
     <div id="settings">
