Allow scrolling on the sonos website to adjust volume

--- a/popup.html
+++ b/popup.html
@@ -23,7 +23,7 @@
     <div id="settings">
       <h3>Sonos Subs Settings</h3>
       <div class="setting">
-        <label for="notificationsToggle">Show Song Notifications</label>
+        <label for="notificationsToggle">Song Notifications</label>
         <input type="checkbox" id="notificationsToggle" />
       </div>
     </div>
