Added donate link

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,9 @@
       </div>
     </div>
     <hr />
-    <div class="credits">Lyrics by <a href="https://lyrics.ovh" target="_blank" rel="noopener noreferrer">lyrics.ovh</a></div>
+    <div class="support-link">
+      <a href="#" id="supportLink" target="_blank">💝 <span>Support Development</span> </a>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
