Added karaoke font size adjustment support

--- a/popup.html
+++ b/popup.html
@@ -26,6 +26,13 @@
         <label for="notificationsToggle">Song Notifications</label>
         <input type="checkbox" id="notificationsToggle" />
       </div>
+      <div class="setting">
+        <label for="fontSizeSlider">Lyrics Font Size</label>
+        <div class="font-size-control">
+          <input type="range" id="fontSizeSlider" min="12" max="48" value="16" class="font-size-slider" />
+          <span id="fontSizeValue">16pt</span>
+        </div>
+      </div>
     </div>
     <hr />
     <div class="support-link">
