Added mediasession support

--- a/popup.html
+++ b/popup.html
@@ -27,6 +27,10 @@
         <input type="checkbox" id="notificationsToggle" />
       </div>
       <div class="setting">
+        <label for="mediaSessionToggle">Media Session Controls</label>
+        <input type="checkbox" id="mediaSessionToggle" />
+      </div>
+      <div class="setting">
         <label for="fontSizeSlider">Lyrics Font Size</label>
         <div class="font-size-control">
           <input type="range" id="fontSizeSlider" min="12" max="48" value="16" class="font-size-slider" />
